# live-transcribe

./: .gitignore  README.md  download_models.py  main.py  pyproject.toml  requirements.txt  setup.py
lt_app/: ai_processing.py  audio.py  config.py  log.py  transcriber.py  turn_detector.py  utils.py
